--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,13 @@
       <version>8.0.23</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.hibernate.common/hibernate-commons-annotations -->
+    <dependency>
+      <groupId>org.hibernate.common</groupId>
+      <artifactId>hibernate-commons-annotations</artifactId>
+      <version>5.1.2.Final</version>
+    </dependency>
+
 
 
 
